parser.ypp
%{
#include <stdio.h>
#include <iostream>
using namespace std;
int yylex();
void yyerror(const char*);
%}

%token INT
%token BYTE
%token B
%token BOOL
%left AND
%left OR
%right NOT
%token TRUE
%token FALSE
%token RETURN
%token IF
%token ELSE
%token WHILE
%token BREAK
%token CONTINUE
%token SC
%token RBRACE
%token LBRACE
%token ASSIGN
%left RELOP
%token ID
%token NUM
%token STRING
%left PLUS
%left MINUS
%right MULT
%right DEV
%left RPAREN
%left LPAREN

%%

Program: Statments;
Statments: Statment | Statments Statment;
Statment: LBRACE Statments RBRACE
        | Type MaybeAssign
        | ID ASSIGN Exp SC
        | Call SC
        | RETURN SC 
        | IF LPAREN Exp RPAREN Statment
        | %prec IF LPAREN Exp RPAREN Statment ELSE Statment
        | WHILE LPAREN Exp RPAREN Statment;
        | BREAK SC
        | CONTINUE SC;
MaybeAssign: SC | ASSIGN Exp SC;
Call: ID LPAREN Exp RPAREN;
Type: INT | BYTE | BOOL;
Exp: LPAREN Exp RPAREN 
    | Exp PLUS Exp
    | Exp MINUS Exp
    | Exp MULT Exp
    | Exp DEV Exp 
    | ID
    | Call
    | NUM
    | NUM B
    | STRING
    | TRUE
    | FALSE
    | NOT Exp
    | Exp AND Exp
    | Exp OR Exp
    | Exp RELOP Exp
    |LPAREN Type RPAREN Exp;

%%
