parser.output
Grammar

    0 $accept: Program $end

    1 Program: Statments

    2 Statments: Statment
    3          | Statments Statment

    4 Statment: LBRACE Statments RBRACE
    5         | Type MaybeAssign
    6         | ID ASSIGN Exp SC
    7         | Call SC
    8         | RETURN SC
    9         | IF LPAREN Exp RPAREN Statment
   10         | LPAREN Exp RPAREN Statment ELSE Statment
   11         | WHILE LPAREN Exp RPAREN Statment
   12         | BREAK SC
   13         | CONTINUE SC

   14 MaybeAssign: SC
   15            | ASSIGN Exp SC

   16 Call: ID LPAREN Exp RPAREN

   17 Type: INT
   18     | BYTE
   19     | BOOL

   20 Exp: LPAREN Exp RPAREN
   21    | Exp '+' Exp
   22    | Exp '-' Exp
   23    | Exp '*' Exp
   24    | Exp '/' Exp
   25    | ID
   26    | Call
   27    | NUM
   28    | NUM B
   29    | STRING
   30    | TRUE
   31    | FALSE
   32    | NOT Exp
   33    | Exp AND Exp
   34    | Exp OR Exp
   35    | Exp RELOP Exp
   36    | LPAREN Type RPAREN Exp


Terminals, with rules where they appear

$end (0) 0
'*' (42) 23
'+' (43) 21
'-' (45) 22
'/' (47) 24
error (256)
INT (258) 17
BYTE (259) 18
B (260) 28
BOOL (261) 19
AND (262) 33
OR (263) 34
NOT (264) 32
TRUE (265) 30
FALSE (266) 31
RETURN (267) 8
IF (268) 9
ELSE (269) 10
WHILE (270) 11
BREAK (271) 12
CONTINUE (272) 13
SC (273) 6 7 8 12 13 14 15
RBRACE (274) 4
LBRACE (275) 4
ASSIGN (276) 6 15
RELOP (277) 35
ID (278) 6 16 25
NUM (279) 27 28
STRING (280) 29
RPAREN (281) 9 10 11 16 20 36
LPAREN (282) 9 10 11 16 20 36


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
Statments (34)
    on left: 2 3, on right: 1 3 4
Statment (35)
    on left: 4 5 6 7 8 9 10 11 12 13, on right: 2 3 9 10 11
MaybeAssign (36)
    on left: 14 15, on right: 5
Call (37)
    on left: 16, on right: 7 26
Type (38)
    on left: 17 18 19, on right: 5 36
Exp (39)
    on left: 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    6 9 10 11 15 16 20 21 22 23 24 32 33 34 35 36


state 0

    0 $accept: . Program $end

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Program    go to state 12
    Statments  go to state 13
    Statment   go to state 14
    Call       go to state 15
    Type       go to state 16


state 1

   17 Type: INT .

    $default  reduce using rule 17 (Type)


state 2

   18 Type: BYTE .

    $default  reduce using rule 18 (Type)


state 3

   19 Type: BOOL .

    $default  reduce using rule 19 (Type)


state 4

    8 Statment: RETURN . SC

    SC  shift, and go to state 17


state 5

    9 Statment: IF . LPAREN Exp RPAREN Statment

    LPAREN  shift, and go to state 18


state 6

   11 Statment: WHILE . LPAREN Exp RPAREN Statment

    LPAREN  shift, and go to state 19


state 7

   12 Statment: BREAK . SC

    SC  shift, and go to state 20


state 8

   13 Statment: CONTINUE . SC

    SC  shift, and go to state 21


state 9

    4 Statment: LBRACE . Statments RBRACE

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statments  go to state 22
    Statment   go to state 14
    Call       go to state 15
    Type       go to state 16


state 10

    6 Statment: ID . ASSIGN Exp SC
   16 Call: ID . LPAREN Exp RPAREN

    ASSIGN  shift, and go to state 23
    LPAREN  shift, and go to state 24


state 11

   10 Statment: LPAREN . Exp RPAREN Statment ELSE Statment

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 33


state 12

    0 $accept: Program . $end

    $end  shift, and go to state 34


state 13

    1 Program: Statments .
    3 Statments: Statments . Statment

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    $default  reduce using rule 1 (Program)

    Statment  go to state 35
    Call      go to state 15
    Type      go to state 16


state 14

    2 Statments: Statment .

    $default  reduce using rule 2 (Statments)


state 15

    7 Statment: Call . SC

    SC  shift, and go to state 36


state 16

    5 Statment: Type . MaybeAssign

    SC      shift, and go to state 37
    ASSIGN  shift, and go to state 38

    MaybeAssign  go to state 39


state 17

    8 Statment: RETURN SC .

    $default  reduce using rule 8 (Statment)


state 18

    9 Statment: IF LPAREN . Exp RPAREN Statment

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 40


state 19

   11 Statment: WHILE LPAREN . Exp RPAREN Statment

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 41


state 20

   12 Statment: BREAK SC .

    $default  reduce using rule 12 (Statment)


state 21

   13 Statment: CONTINUE SC .

    $default  reduce using rule 13 (Statment)


state 22

    3 Statments: Statments . Statment
    4 Statment: LBRACE Statments . RBRACE

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    RBRACE    shift, and go to state 42
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statment  go to state 35
    Call      go to state 15
    Type      go to state 16


state 23

    6 Statment: ID ASSIGN . Exp SC

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 43


state 24

   16 Call: ID LPAREN . Exp RPAREN

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 44


state 25

   32 Exp: NOT . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 45


state 26

   30 Exp: TRUE .

    $default  reduce using rule 30 (Exp)


state 27

   31 Exp: FALSE .

    $default  reduce using rule 31 (Exp)


state 28

   16 Call: ID . LPAREN Exp RPAREN
   25 Exp: ID .

    LPAREN  shift, and go to state 24

    $default  reduce using rule 25 (Exp)


state 29

   27 Exp: NUM .
   28    | NUM . B

    B  shift, and go to state 46

    $default  reduce using rule 27 (Exp)


state 30

   29 Exp: STRING .

    $default  reduce using rule 29 (Exp)


state 31

   20 Exp: LPAREN . Exp RPAREN
   36    | LPAREN . Type RPAREN Exp

    INT     shift, and go to state 1
    BYTE    shift, and go to state 2
    BOOL    shift, and go to state 3
    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Type  go to state 47
    Exp   go to state 48


state 32

   26 Exp: Call .

    $default  reduce using rule 26 (Exp)


state 33

   10 Statment: LPAREN Exp . RPAREN Statment ELSE Statment
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND     shift, and go to state 49
    OR      shift, and go to state 50
    RELOP   shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    RPAREN  shift, and go to state 56


state 34

    0 $accept: Program $end .

    $default  accept


state 35

    3 Statments: Statments Statment .

    $default  reduce using rule 3 (Statments)


state 36

    7 Statment: Call SC .

    $default  reduce using rule 7 (Statment)


state 37

   14 MaybeAssign: SC .

    $default  reduce using rule 14 (MaybeAssign)


state 38

   15 MaybeAssign: ASSIGN . Exp SC

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 57


state 39

    5 Statment: Type MaybeAssign .

    $default  reduce using rule 5 (Statment)


state 40

    9 Statment: IF LPAREN Exp . RPAREN Statment
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND     shift, and go to state 49
    OR      shift, and go to state 50
    RELOP   shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    RPAREN  shift, and go to state 58


state 41

   11 Statment: WHILE LPAREN Exp . RPAREN Statment
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND     shift, and go to state 49
    OR      shift, and go to state 50
    RELOP   shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    RPAREN  shift, and go to state 59


state 42

    4 Statment: LBRACE Statments RBRACE .

    $default  reduce using rule 4 (Statment)


state 43

    6 Statment: ID ASSIGN Exp . SC
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND    shift, and go to state 49
    OR     shift, and go to state 50
    SC     shift, and go to state 60
    RELOP  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55


state 44

   16 Call: ID LPAREN Exp . RPAREN
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND     shift, and go to state 49
    OR      shift, and go to state 50
    RELOP   shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    RPAREN  shift, and go to state 61


state 45

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   32    | NOT Exp .
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    RELOP  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55

    $default  reduce using rule 32 (Exp)


state 46

   28 Exp: NUM B .

    $default  reduce using rule 28 (Exp)


state 47

   36 Exp: LPAREN Type . RPAREN Exp

    RPAREN  shift, and go to state 62


state 48

   20 Exp: LPAREN Exp . RPAREN
   21    | Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND     shift, and go to state 49
    OR      shift, and go to state 50
    RELOP   shift, and go to state 51
    '+'     shift, and go to state 52
    '-'     shift, and go to state 53
    '*'     shift, and go to state 54
    '/'     shift, and go to state 55
    RPAREN  shift, and go to state 63


state 49

   33 Exp: Exp AND . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 64


state 50

   34 Exp: Exp OR . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 65


state 51

   35 Exp: Exp RELOP . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 66


state 52

   21 Exp: Exp '+' . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 67


state 53

   22 Exp: Exp '-' . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 68


state 54

   23 Exp: Exp '*' . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 69


state 55

   24 Exp: Exp '/' . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 70


state 56

   10 Statment: LPAREN Exp RPAREN . Statment ELSE Statment

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statment  go to state 71
    Call      go to state 15
    Type      go to state 16


state 57

   15 MaybeAssign: ASSIGN Exp . SC
   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    AND    shift, and go to state 49
    OR     shift, and go to state 50
    SC     shift, and go to state 72
    RELOP  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55


state 58

    9 Statment: IF LPAREN Exp RPAREN . Statment

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statment  go to state 73
    Call      go to state 15
    Type      go to state 16


state 59

   11 Statment: WHILE LPAREN Exp RPAREN . Statment

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statment  go to state 74
    Call      go to state 15
    Type      go to state 16


state 60

    6 Statment: ID ASSIGN Exp SC .

    $default  reduce using rule 6 (Statment)


state 61

   16 Call: ID LPAREN Exp RPAREN .

    $default  reduce using rule 16 (Call)


state 62

   36 Exp: LPAREN Type RPAREN . Exp

    NOT     shift, and go to state 25
    TRUE    shift, and go to state 26
    FALSE   shift, and go to state 27
    ID      shift, and go to state 28
    NUM     shift, and go to state 29
    STRING  shift, and go to state 30
    LPAREN  shift, and go to state 31

    Call  go to state 32
    Exp   go to state 75


state 63

   20 Exp: LPAREN Exp RPAREN .

    $default  reduce using rule 20 (Exp)


state 64

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   33    | Exp AND Exp .
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    OR     shift, and go to state 50
    RELOP  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55

    $default  reduce using rule 33 (Exp)


state 65

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   34    | Exp OR Exp .
   35    | Exp . RELOP Exp

    RELOP  shift, and go to state 51
    '+'    shift, and go to state 52
    '-'    shift, and go to state 53
    '*'    shift, and go to state 54
    '/'    shift, and go to state 55

    $default  reduce using rule 34 (Exp)


state 66

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   35    | Exp RELOP Exp .

    '+'  shift, and go to state 52
    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 35 (Exp)


state 67

   21 Exp: Exp . '+' Exp
   21    | Exp '+' Exp .
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    '-'  shift, and go to state 53
    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 21 (Exp)


state 68

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   22    | Exp '-' Exp .
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 22 (Exp)


state 69

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   23    | Exp '*' Exp .
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    '*'  shift, and go to state 54
    '/'  shift, and go to state 55

    $default  reduce using rule 23 (Exp)


state 70

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   24    | Exp '/' Exp .
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp

    '/'  shift, and go to state 55

    $default  reduce using rule 24 (Exp)


state 71

   10 Statment: LPAREN Exp RPAREN Statment . ELSE Statment

    ELSE  shift, and go to state 76


state 72

   15 MaybeAssign: ASSIGN Exp SC .

    $default  reduce using rule 15 (MaybeAssign)


state 73

    9 Statment: IF LPAREN Exp RPAREN Statment .

    $default  reduce using rule 9 (Statment)


state 74

   11 Statment: WHILE LPAREN Exp RPAREN Statment .

    $default  reduce using rule 11 (Statment)


state 75

   21 Exp: Exp . '+' Exp
   22    | Exp . '-' Exp
   23    | Exp . '*' Exp
   24    | Exp . '/' Exp
   33    | Exp . AND Exp
   34    | Exp . OR Exp
   35    | Exp . RELOP Exp
   36    | LPAREN Type RPAREN Exp .

    $default  reduce using rule 36 (Exp)


state 76

   10 Statment: LPAREN Exp RPAREN Statment ELSE . Statment

    INT       shift, and go to state 1
    BYTE      shift, and go to state 2
    BOOL      shift, and go to state 3
    RETURN    shift, and go to state 4
    IF        shift, and go to state 5
    WHILE     shift, and go to state 6
    BREAK     shift, and go to state 7
    CONTINUE  shift, and go to state 8
    LBRACE    shift, and go to state 9
    ID        shift, and go to state 10
    LPAREN    shift, and go to state 11

    Statment  go to state 77
    Call      go to state 15
    Type      go to state 16


state 77

   10 Statment: LPAREN Exp RPAREN Statment ELSE Statment .

    $default  reduce using rule 10 (Statment)
